--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,9 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>  
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
