--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,18 @@
     <script src="cordova.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-    <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>  
+    <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
+
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyAKYt0h05-NPr5hn125q2U6t3HHB9iIm3g",
+        authDomain: "inventorycontrol.firebaseapp.com",
+        databaseURL: "https://inventorycontrol.firebaseio.com",
+        storageBucket: "firebase-inventorycontrol.appspot.com",
+      };
+      firebase.initializeApp(config);
+    </script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
