--- a/www/index.html
+++ b/www/index.html
@@ -12,52 +12,29 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-
-    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
-
-    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-    <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
-
-    <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyAKYt0h05-NPr5hn125q2U6t3HHB9iIm3g",
-        authDomain: "inventorycontrol.firebaseapp.com",
-        databaseURL: "https://inventorycontrol.firebaseio.com",
-        storageBucket: "firebase-inventorycontrol.appspot.com",
-      };
-      firebase.initializeApp(config);
-    </script>
-
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="myScan">
 
     <ion-nav-view></ion-nav-view>
-    <!-- <a href="views/home.html" style='display:table;margin:40% auto;padding:10px;'>Open Scanner</a> -->
-    <!-- <ion-view>
-      <ion-content>
 
-      		<div style='background:red;display:table;margin:40% auto;padding:10px;color:white' ng-click='scan()'>
-            Click Here to Scan
-          </div>
-
-      </ion-content>
-    </ion-view> -->
-    <!-- <ion-view>
-      <ion-content>
-
-      		<div style='background:red;display:table;margin:40% auto;padding:10px;color:white' ng-click='something()'>
-            Click Here to Scan
-          </div>
-
-      </ion-content>
-    </ion-view> -->
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="cordova.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
+    <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyAKYt0h05-NPr5hn125q2U6t3HHB9iIm3g",
+      authDomain: "inventorycontrol.firebaseapp.com",
+      databaseURL: "https://inventorycontrol.firebaseio.com",
+      storageBucket: "firebase-inventorycontrol.appspot.com",
+    };
+    firebase.initializeApp(config);
+    </script>
+    <script src="js/app.js"></script>
+    <script src="config/myScan.js"></script>
+    <script src="controllers/ProductsCtrl.js"></script>
+    <script src="controllers/HomeCtrl.js"></script>
   </body>
 </html>
