--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,15 @@
   </head>
   <body ng-app="myScan">
 
-    <ion-nav-view></ion-nav-view>
+<ion-nav-bar class="bar-stable">
+  <ion-nav-back-button>
+  </ion-nav-back-button>
+</ion-nav-bar>
+
+<ion-nav-view>
+  Hello
+</ion-nav-view>
+
 
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
