Added API call to Amazon for product images

--- a/www/index.html
+++ b/www/index.html
@@ -23,11 +23,15 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
     <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
+    <script src="requires/sha256.js"></script>
+    <script src="requires/xml2json.js"></script>
     <script src="js/app.js"></script>
     <script src="auth/Auth.js"></script>
     <script src="services/productService.js"></script>
+    <script src="services/amazonService.js"></script>
     <script src="config/myScan.js"></script>
     <script src="controllers/LoginCtrl.js"></script>
     <script src="controllers/ProductsCtrl.js"></script>
