Added styling, add and update product

--- a/www/index.html
+++ b/www/index.html
@@ -12,8 +12,8 @@
   <body ng-app="myScan">
 
     <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
+      <!-- <ion-nav-back-button>
+      </ion-nav-back-button> -->
     </ion-nav-bar>
 
     <ion-nav-view>
@@ -34,8 +34,9 @@
     <script src="services/amazonService.js"></script>
     <script src="config/myScan.js"></script>
     <script src="controllers/LoginCtrl.js"></script>
-    <script src="controllers/ProductsCtrl.js"></script>
+    <script src="controllers/ViewProductsCtrl.js"></script>
     <script src="controllers/HomeCtrl.js"></script>
     <script src="controllers/AddProductCtrl.js"></script>
+    <script src="controllers/UpdateProductCtrl.js"></script>
   </body>
 </html>
