--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
     <script src="auth/Auth.js"></script>
     <script src="services/productService.js"></script>
     <script src="services/amazonService.js"></script>
+    <script src="services/firebaseReference.js"></script>
     <script src="config/myScan.js"></script>
     <script src="controllers/LoginCtrl.js"></script>
     <script src="controllers/ViewProductsCtrl.js"></script>
